exercises chapter 2